RESTCallout/src/objects/Integration_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Collection_Name__c</fullName>
        <label>Collection Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Integration Target</label>
        <referenceTo>Integration_Target__c</referenceTo>
        <relationshipLabel>Integration Definitions</relationshipLabel>
        <relationshipName>Integration_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mock_Class_Name__c</fullName>
        <label>Mock Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Namespace__c</fullName>
        <label>Output Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL_Method__c</fullName>
        <label>URL Method</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Mock_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Mock Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Integration Definition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mock_Class_Name_required_when_Use_Mock</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Use_Mock_Class__c = true, Len(Mock_Class_Name__c) = 0)</errorConditionFormula>
        <errorMessage>You need to enter a Mock Class Name when you select the Use Mock function</errorMessage>
    </validationRules>
</CustomObject>